bug fix and refactoring of final degree work features - getting only not closed execution years - checking if department administrative office has current associated departement (this shouldn't be necessary!....) - converted all DTOs involved into wrappers of domain objects - fixed JSPs accordingly